# ai-crypto-nexus

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  setup.py
docs/: agents.md  architecture.md  trading.md
src/nexus/: __init__.py  cli.py  config.py
src/nexus/agents/: __init__.py  base.py  orchestrator.py  research_agent.py  risk_agent.py  trading_agent.py
src/nexus/defi/: il_calculator.py  protocol_scorer.py  yield_optimizer.py
src/nexus/onchain/: smart_money.py  whale_tracker.py
src/nexus/trading/: __init__.py  backtester.py  risk.py
src/nexus/trading/strategies/: base.py  mean_reversion.py  momentum.py  sentiment.py
src/nexus/utils/: price_oracle.py  web3_manager.py
tests/: test_agents.py  test_defi.py  test_trading.py
